fix window name overflow

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -25,7 +25,7 @@ tooltip label {
   color: @theme_text_color;
   font-size: 20px;
   font-style: italic;
-  margin-right: 20px;
+  margin: 20px 20px 20px 0;
   padding: 0.5em;
 }
 
